--- a/.github/ISSUE_TEMPLATE/solution-submission.yml
+++ b/.github/ISSUE_TEMPLATE/solution-submission.yml
@@ -14,21 +14,21 @@ body:
     id: contact
     attributes:
       label: Your Name
-      placeholder: ex. John Smith
+      placeholder: Youssef Jallouli
     validations:
       required: true
   - type: input
     id: email
     attributes:
       label: Your Email
-      placeholder: ex. johnsmith@gmail.com
+      placeholder: yjall032@uottawa.ca
     validations:
       required: true
   - type: input
     id: source-url
     attributes:
       label: Source Code URL
-      description: Please submit your repo URL or repl.it URL.
+      description: My repo is in this Fork.
     validations:
       required: true
   - type: input
@@ -42,18 +42,22 @@ body:
       label: Run instructions
       description: Explain how to properly run your app.
       placeholder: |
-        1. Do this...
-        2. Do that...
-        3. ...
-        4. Profit.
+        1-To run an application in Angular, you will need to have Node.js and the Angular CLI (Command Line Interface) installed on your computer.
+        2-Open a terminal window and navigate to the directory where you want to clone this application. 
+        3-Run the following command to install the Angular CLI globally: npm install -g @angular/cli
+        4-Navigate into the new application directory.
+        5-You can now run the development server by using the command : ng serve, 
+        6-This will start the development server and open the application in a web browser at http://localhost:4200/
+        7- This will create a production-ready build of your application in the dist folder by using the command :ng build --prod 
+        
   - type: textarea
     id: goals-completed
     attributes:
       label: Goals Completed
       description: Which goals did you complete?
       placeholder: |
-        Ex. I completed goals 1 and 2, I started goal 3
+        Ex. I completed goals 1 to 6.
   - type: textarea
     id: anything-else
     attributes:
-      label: Anything else you would like us to know?
+      label: not tested enough.
